emergency contact required only for in-person

--- a/components/form/default.htm
+++ b/components/form/default.htm
@@ -195,14 +195,14 @@
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
-						<label for="emergency_contact_name"><p>Emergency contact name<span class="required">*</span></p></label>
+						<label for="emergency_contact_name"><p>Emergency contact name</p></label>
 						<input type="text" id="emergency_contact_name" name="emergency_contact_name" value="{{data.emergency_contact_name}}" required>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
-						<label for="emergency_contact_phone"><p>Emergency contact phone (include also the Country code)<span class="required">*</span></p></label>
+						<label for="emergency_contact_phone"><p>Emergency contact phone (include also the Country code)</p></label>
 						<input type="text" id="emergency_contact_phone" name="emergency_contact_phone" value="{{data.emergency_contact_phone}}" required>
 					</div>
 				</div>
