--- a/components/form/default.htm
+++ b/components/form/default.htm
@@ -431,7 +431,7 @@
 				</div>
 				<div class="row box hide_for_virtual">
 					<div class="col-md-12 col-xs-12 field">
-						<label for="checkbox_optional_attend_welcome"><p><input type="checkbox" name="checkbox_optional_attend_welcome" value="1" id="checkbox_optional_attend_welcome" {% if (data.checkbox_optional_attend_welcome == 1) %} checked {% endif %}> I plan to attend the Welcome reception on 16 October 2022 (included in the in-person registration fee).</p></label>
+						<label for="checkbox_optional_attend_welcome"><p><input type="checkbox" name="checkbox_optional_attend_welcome" value="1" id="checkbox_optional_attend_welcome" {% if (data.checkbox_optional_attend_welcome == 1) %} checked {% endif %}> I plan to attend the Welcome reception on 16 October 2022, 5-7pm (included in the in-person registration fee).</p></label>
 					</div>
 				</div>
 				<div class="row box hide_for_virtual">
